--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "typer>=0.9.0",
     "rich>=13.0.0",
     "pyperclip>=1.8.0",
+    "jinja2>=3.1.6",
 ]
 
 [project.optional-dependencies]
@@ -42,6 +43,7 @@ docs = [
 ]
 dev = [
     "pytest>=8.4.2",
+    "ruff>=0.12.12",
 ]
 
 [tool.hatch.build.targets.wheel]
